--- a/.github/workflows/.github/workflows/odds-list-sports.yml
+++ b/.github/workflows/.github/workflows/odds-list-sports.yml
@@ -3,10 +3,10 @@ name: Odds API — List Sports (daily)
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 4 * * *"  # 04:15 UTC daily (adjust as you like)
+    - cron: "15 4 * * *"  # 04:15 UTC daily
 
 permissions:
-  contents: write  # allow bot to commit sports.json
+  contents: write
 
 jobs:
   list-sports:
@@ -15,45 +15,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Install requests
-        run: pip install requests
+      - name: Ensure data directory
+        run: mkdir -p data
 
       - name: Fetch sports from Odds API
         env:
-          ODDS_API_KEY: ${{ secrets.ODDS_API_KEY }}
+          API_KEY: ${{ secrets.ODDS_API_KEY }}
         run: |
-          mkdir -p data
-          python - << 'PY'
-          import json, os, requests
-          api_key = os.environ["ODDS_API_KEY"]
-          url = "https://api.the-odds-api.com/v4/sports/?all=true&apiKey=" + api_key
-          r = requests.get(url, timeout=30)
-          r.raise_for_status()
-          sports = r.json()
-          # Keep only small useful fields
-          trimmed = [
-            {
-              "key": s.get("key",""),
-              "group": s.get("group",""),
-              "title": s.get("title",""),
-              "description": s.get("description",""),
-            }
-            for s in sports
-          ]
-          with open("data/sports.json","w") as f:
-            json.dump(trimmed, f, indent=2)
-          print(f"Wrote {len(trimmed)} sports to data/sports.json")
-          PY
+          set -euo pipefail
+          if [ -z "${API_KEY:-}" ]; then
+            echo "ODDS_API_KEY secret is missing." >&2
+            exit 1
+          fi
+          curl -sS "https://api.the-odds-api.com/v4/sports?apiKey=${API_KEY}" \
+            -o data/sports.json
+
+          # Basic sanity check
+          python - <<'PY'
+import json, sys
+with open("data/sports.json") as f:
+    data=json.load(f)
+if not isinstance(data, list) or not data:
+    print("sports.json looks invalid/empty", file=sys.stderr)
+    sys.exit(2)
+print(f"Fetched {len(data)} sports")
+PY
 
       - name: Commit sports.json
         run: |
-          git config --local user.name "github-actions[bot]"
+          set -e
+          git config --local user.name  "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/sports.json
-          git commit -m "Update sports list from Odds API" || echo "No changes"
-          git push || true
+          git commit -m "chore: update sports list from Odds API" || echo "No changes"
+          git push
