--- a/.github/workflows/ladbrokes.yml
+++ b/.github/workflows/ladbrokes.yml
@@ -8,18 +8,15 @@ on:
 permissions:
   contents: write
 
-concurrency:
-  group: ladbrokes-scrape
-  cancel-in-progress: true
-
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,12 +27,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install requests beautifulsoup4 lxml
+          pip install requests beautifulsoup4 lxml pandas
 
-      - name: Ensure output folder
+      - name: Ensure output folder exists
         run: mkdir -p data/ladbrokes
 
-      # ✅ Step 2 (updated): run scraper, then always show/commit artifacts
       - name: Auto-discover meetings and scrape odds
         run: |
           set -euo pipefail
@@ -44,28 +40,39 @@ jobs:
       - name: Show output (list files & preview)
         if: always()
         run: |
-          echo "== data/ladbrokes =="
+          echo "PWD=$(pwd)"
+          echo "== data/ =="
+          ls -lah data || true
+          echo "== data/ladbrokes/ =="
           ls -lah data/ladbrokes || true
-          echo
-          for f in $(ls -1t data/ladbrokes/* 2>/dev/null | head -n 6); do
-            echo "---- $f ----"
-            head -n 40 "$f" || true
-            echo
-          done
+          echo "== Preview a JSON (if any) =="
+          set +e
+          f=$(ls -1t data/ladbrokes/meetings_*.json 2>/dev/null | head -n1)
+          if [ -n "${f:-}" ]; then head -n 80 "$f"; else echo "No meetings_*.json found"; fi
 
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: ladbrokes-output
-          path: data/ladbrokes/**
+          path: |
+            data/ladbrokes/**/*.json
+            data/ladbrokes/**/*.html
           if-no-files-found: warn
 
       - name: Commit results to repo
-        if: always()
+        env:
+          BRANCH: ${{ github.ref_name }}
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name  "github-actions[bot]"
-          git add data/ladbrokes || true
-          git commit -m "Ladbrokes scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
-          git push || echo "No changes to push"
+          set -euo pipefail
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name  "github-actions[bot]"
+          echo "Staging files (force to bypass ignore rules) ..."
+          git add -A -f data/ladbrokes
+          if git diff --cached --quiet; then
+            echo "Nothing to commit."
+            exit 0
+          fi
+          git commit -m "Scrape: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          git pull --rebase origin "$BRANCH" || true
+          git push origin HEAD:"$BRANCH"
